# sky-painter

./: .gitmodules  CMakeLists.txt  CMakePresets.json
Content/: CMakeLists.txt
Content/Resources/Scenes/: FireworksEditor.json
Content/Scripts/: CMakeLists.txt
Content/Scripts/include/Scripts/: TestScript.h
Content/Scripts/src/: Implementation.cpp  TestScript.cpp
